fix latest news gap.

--- a/sass/pages.scss
+++ b/sass/pages.scss
@@ -851,6 +851,7 @@ hgroup {
   padding: 1px 15px;
   text-transform: uppercase;
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 .top-news .views-field-title {
